[workspace]
resolver = "2"
members = ["db"]

[workspace.dependencies]
axum = "0.8.3"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
surrealdb = { version = "2.2.2", features = ["kv-surrealkv"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
